# homework

./: .gitignore  README.md
music_app/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
music_app/src/: api.py  database.py  models.py
music_app/src/music_app/: api.py  database.py  models.py
music_app/src/music_app/tools/: setup_db.py
music_app/src/tools/: setup_db.py
music_app/tests/: conftest.py  test_api.py  tests.py
